--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Topan by ThomasK81</title>
+    <title>(Meletē)ToPān v.0.1 by ThomasK81</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Topan</h1>
+        <h1>(Meletē)ToPān v.0.1</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/ThomasK81/ToPan">View the Project on GitHub <small>ThomasK81/ToPan</small></a></p>
