--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>(Meletē)ToPān v.0.1 by ThomasK81</title>
+    <title>(Meletē)ToPān v.0.1 by Thomas Köntges</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -44,7 +44,7 @@
 
 <ol>
 <li>Install <a href="https://www.r-project.org">R</a> and optionally <a href="https://www.rstudio.com">RStudio</a> </li>
-<li>In RStudio/R install some packages you will need: <code>install.packages("shiny")</code>, <code>install.packages("LDAvis")</code>, <code>install.packages("XML")</code>, <code>install.packages("xml2")</code> <code>install.packages("RCurl")</code>, <code>install.packages("httr")</code>, <code>install.packages("lda")</code> </li>
+<li>In RStudio/R install some packages you will need: <code>install.packages("shiny")</code>, <code>install.packages("LDAvis")</code>, <code>install.packages("XML")</code>, <code>install.packages("xml2")</code> <code>install.packages("RCurl")</code>, <code>install.packages("httr")</code>, <code>install.packages("lda")</code>, <code>install.packages("servr")</code> </li>
 <li><code>library(shiny)</code></li>
 <li><code>runUrl("https://github.com/ThomasK81/ToPan/archive/master.zip")</code></li>
 <li>Enjoy!</li>
@@ -57,7 +57,7 @@
 
 <ol>
 <li>Install <a href="https://www.r-project.org">R</a> and optionally <a href="https://www.rstudio.com">RStudio</a> </li>
-<li>In RStudio/R install some packages you will need: <code>install.packages("shiny")</code>, <code>install.packages("LDAvis")</code>, <code>install.packages("XML")</code>, <code>install.packages("xml2")</code> <code>install.packages("RCurl")</code>, <code>install.packages("httr")</code>, <code>install.packages("lda")</code> </li>
+<li>In RStudio/R install some packages you will need: <code>install.packages("shiny")</code>, <code>install.packages("LDAvis")</code>, <code>install.packages("XML")</code>, <code>install.packages("xml2")</code> <code>install.packages("RCurl")</code>, <code>install.packages("httr")</code>, <code>install.packages("lda")</code>, <code>install.packages("servr")</code> </li>
 <li><code>library(shiny)</code></li>
 <li>
 <code>runApp('GithubProjects/ToPan')</code> ("GithubProjects" or whatever folder you have cloned it to)</li>
